force-app/main/default/objects/KiwiSport_Data__c/KiwiSport_Data__c.object-meta.xml
<CustomObject>
    <description>Participation and costing data collected from KiwiSport providers.</description>
    <label>KiwiSport Data</label>
    <nameField>
        <label>KiwiSport Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KiwiSport Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>