force-app/main/default/objects/KiwiSport_Data__c/fields/Average_Length_of_Session_in_hours__c.field-meta.xml
<CustomField>
    <fullName>Average_Length_of_Session_in_hours__c</fullName>
    <label>Average Length of Session (in hours)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>