force-app/main/default/objects/KiwiSport_Data__c/fields/Financial_Partners__c.field-meta.xml
<CustomField>
    <fullName>Financial_Partners__c</fullName>
    <label>Financial Partners</label>
    <length>255</length>
    <type>Text</type>
</CustomField>