force-app/main/default/objects/KiwiSport_Data__c/fields/If_Other_please_name_the_Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>If_Other_please_name_the_Activity_Type__c</fullName>
    <label>If “Other” please name the Activity Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>