force-app/main/default/objects/KiwiSport_Data__c/fields/Individual_Participants__c.field-meta.xml
<CustomField>
    <fullName>Individual_Participants__c</fullName>
    <label>Individual Participants</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>