force-app/main/default/objects/KiwiSport_Data__c/fields/Initiative__c.field-meta.xml
<CustomField>
    <fullName>Initiative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Initiative</label>
    <referenceTo>Initiative__c</referenceTo>
    <relationshipLabel>KiwiSport Data</relationshipLabel>
    <relationshipName>KiwiSport_Data</relationshipName>
    <type>Lookup</type>
</CustomField>