force-app/main/default/objects/KiwiSport_Data__c/fields/KiwiSport_Project_Name__c.field-meta.xml
<CustomField>
    <fullName>KiwiSport_Project_Name__c</fullName>
    <formula>If(CONTAINS($User.Profile_Name__c,&apos;Partner&apos;),
HYPERLINK(&quot;/partners2/&quot;+Id+&quot;/e?cancelURL=partners/&quot;+Id, Name,&quot;_self&quot;),
HYPERLINK(&quot;/&quot;+Id+&quot;/e?cancelURL=&quot;+Id, Name,&quot;_self&quot;))</formula>
    <label>KiwiSport Project Name</label>
    <type>Text</type>
</CustomField>