force-app/main/default/objects/KiwiSport_Data__c/fields/Local_Authority_Grants__c.field-meta.xml
<CustomField>
    <fullName>Local_Authority_Grants__c</fullName>
    <label>Local Authority Grants</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>