force-app/main/default/objects/KiwiSport_Data__c/fields/Low_Participation_Targets__c.field-meta.xml
<CustomField>
    <fullName>Low_Participation_Targets__c</fullName>
    <label>Low Participation Targets</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low Participating Communities</fullName>
            </value>
            <value>
                <fullName>Asian</fullName>
            </value>
            <value>
                <fullName>Indian</fullName>
            </value>
            <value>
                <fullName>Low Decile</fullName>
            </value>
            <value>
                <fullName>Samoan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>