force-app/main/default/objects/KiwiSport_Data__c/fields/Multiple_or_Other_sports__c.field-meta.xml
<CustomField>
    <fullName>Multiple_or_Other_sports__c</fullName>
    <description>Multiple or Other sports</description>
    <inlineHelpText>Please name the sport/s if Other or Multiple Sport selected</inlineHelpText>
    <label>Multiple or Other sports</label>
    <length>100</length>
    <type>Text</type>
</CustomField>