force-app/main/default/objects/KiwiSport_Data__c/fields/NSO_RSO_Club_Contribution__c.field-meta.xml
<CustomField>
    <fullName>NSO_RSO_Club_Contribution__c</fullName>
    <label>NSO/RSO/Club Contribution</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>