force-app/main/default/objects/KiwiSport_Data__c/fields/Number_of_Individual_Participants__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Individual_Participants__c</fullName>
    <label>Number of Individual Participants</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>