force-app/main/default/objects/KiwiSport_Data__c/fields/Number_of_Sessions_Delivered__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Sessions_Delivered__c</fullName>
    <label>Number of Sessions Delivered</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>