force-app/main/default/objects/KiwiSport_Data__c/fields/of_Primary_Aged_Participants__c.field-meta.xml
<CustomField>
    <fullName>of_Primary_Aged_Participants__c</fullName>
    <label>% of Primary Aged Participants</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>