force-app/main/default/objects/KiwiSport_Data__c/fields/of_Secondary_Aged_Participants__c.field-meta.xml
<CustomField>
    <fullName>of_Secondary_Aged_Participants__c</fullName>
    <label>% of Secondary Aged Participants</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>