force-app/main/default/objects/KiwiSport_Data__c/fields/Organisation__c.field-meta.xml
<CustomField>
    <fullName>Organisation__c</fullName>
    <label>Organisation</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>KiwiSport Data</relationshipLabel>
    <relationshipName>KiwiSport_Data</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>