force-app/main/default/objects/KiwiSport_Data__c/fields/Other_Contributions__c.field-meta.xml
<CustomField>
    <fullName>Other_Contributions__c</fullName>
    <label>Other Contributions</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>