force-app/main/default/objects/KiwiSport_Data__c/fields/Other_or_Multiple_Sports_please_name__c.field-meta.xml
<CustomField>
    <fullName>Other_or_Multiple_Sports_please_name__c</fullName>
    <label>“Other” or “Multiple Sports” please name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>