force-app/main/default/objects/KiwiSport_Data__c/fields/Participant_Fees__c.field-meta.xml
<CustomField>
    <fullName>Participant_Fees__c</fullName>
    <label>Participant Fees</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>