force-app/main/default/objects/KiwiSport_Data__c/fields/Points_of_Note__c.field-meta.xml
<CustomField>
    <fullName>Points_of_Note__c</fullName>
    <label>Points of Note</label>
    <type>TextArea</type>
</CustomField>