force-app/main/default/objects/KiwiSport_Data__c/fields/Primary_Strategic_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Primary_Strategic_Outcome__c</fullName>
    <label>Primary Strategic Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Increased Opportunities</fullName>
            </value>
            <value>
                <fullName>Increased Skills</fullName>
            </value>
            <value>
                <fullName>Increased Participation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>