force-app/main/default/objects/KiwiSport_Data__c/fields/RPF_Amount_Applied_For__c.field-meta.xml
<CustomField>
    <fullName>RPF_Amount_Applied_For__c</fullName>
    <label>RPF Amount Applied For</label>
    <precision>9</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>