force-app/main/default/objects/KiwiSport_Data__c/fields/RPF_Amount_Approved_this_year__c.field-meta.xml
<CustomField>
    <fullName>RPF_Amount_Approved_this_year__c</fullName>
    <label>RPF Amount Approved this year</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>