force-app/main/default/objects/KiwiSport_Data__c/fields/RPF_Amount_Approved_Total__c.field-meta.xml
<CustomField>
    <fullName>RPF_Amount_Approved_Total__c</fullName>
    <label>RPF Amount Approved Total</label>
    <precision>8</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>