force-app/main/default/objects/KiwiSport_Data__c/fields/RPF_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>RPF_Amount_Paid__c</fullName>
    <label>RPF Amount Paid</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>