force-app/main/default/objects/KiwiSport_Data__c/fields/RPF_Approved_Year_2__c.field-meta.xml
<CustomField>
    <fullName>RPF_Approved_Year_2__c</fullName>
    <label>RPF Approved Year 2</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>