force-app/main/default/objects/KiwiSport_Data__c/fields/School__c.field-meta.xml
<CustomField>
    <fullName>School__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Schools Delivered Too</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Organisation__c</field>
            <operation>equals</operation>
            <valueField>School__c.Organisation__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>School__c</referenceTo>
    <relationshipLabel>KiwiSport Data</relationshipLabel>
    <relationshipName>KiwiSport_Data</relationshipName>
    <type>Lookup</type>
</CustomField>