force-app/main/default/objects/KiwiSport_Data__c/fields/School_Contribution__c.field-meta.xml
<CustomField>
    <fullName>School_Contribution__c</fullName>
    <label>School Contribution</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>