force-app/main/default/objects/KiwiSport_Data__c/fields/Setting__c.field-meta.xml
<CustomField>
    <fullName>Setting__c</fullName>
    <label>Setting</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lunchtimes</fullName>
            </value>
            <value>
                <fullName>Before School/After School</fullName>
            </value>
            <value>
                <fullName>Curricular</fullName>
            </value>
            <value>
                <fullName>Holidays</fullName>
            </value>
            <value>
                <fullName>Weekends</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>