force-app/main/default/objects/KiwiSport_Data__c/fields/Source_of_Other_Contributions__c.field-meta.xml
<CustomField>
    <fullName>Source_of_Other_Contributions__c</fullName>
    <label>Source of Other Contributions</label>
    <length>100</length>
    <type>Text</type>
</CustomField>