force-app/main/default/objects/KiwiSport_Data__c/fields/Sponsorship__c.field-meta.xml
<CustomField>
    <fullName>Sponsorship__c</fullName>
    <label>Sponsorship</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>