force-app/main/default/objects/KiwiSport_Data__c/fields/Sports__c.field-meta.xml
<CustomField>
    <fullName>Sports__c</fullName>
    <label>Sports</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AFL</fullName>
            </value>
            <value>
                <fullName>Archery</fullName>
            </value>
            <value>
                <fullName>Athletics</fullName>
            </value>
            <value>
                <fullName>Badminton</fullName>
            </value>
            <value>
                <fullName>Baseball</fullName>
            </value>
            <value>
                <fullName>Basketball / Mini Ball</fullName>
            </value>
            <value>
                <fullName>Bowls (Indoor / Lawn)</fullName>
            </value>
            <value>
                <fullName>Boxing</fullName>
            </value>
            <value>
                <fullName>Canoeing / Rafting / Kayaking</fullName>
            </value>
            <value>
                <fullName>Climbing</fullName>
            </value>
            <value>
                <fullName>Cricket</fullName>
            </value>
            <value>
                <fullName>Croquet</fullName>
            </value>
            <value>
                <fullName>Curling</fullName>
            </value>
            <value>
                <fullName>Cycling (including BMX, Mountain Biking)</fullName>
            </value>
            <value>
                <fullName>Diving</fullName>
            </value>
            <value>
                <fullName>Dodgeball</fullName>
            </value>
            <value>
                <fullName>Equestrian</fullName>
            </value>
            <value>
                <fullName>Football</fullName>
            </value>
            <value>
                <fullName>Futsal</fullName>
            </value>
            <value>
                <fullName>Golf</fullName>
            </value>
            <value>
                <fullName>Gymnastics</fullName>
            </value>
            <value>
                <fullName>Hockey</fullName>
            </value>
            <value>
                <fullName>Kayaking</fullName>
            </value>
            <value>
                <fullName>Ki O Rahi</fullName>
            </value>
            <value>
                <fullName>Martial Arts (including Judo, TaeKwondo)</fullName>
            </value>
            <value>
                <fullName>Multiple Sports</fullName>
            </value>
            <value>
                <fullName>Netball</fullName>
            </value>
            <value>
                <fullName>Orienteering</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Rowing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>