force-app/main/default/objects/KiwiSport_Data__c/fields/Suburb__c.field-meta.xml
<CustomField>
    <fullName>Suburb__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Suburbs Delivered In</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Organisation__c</field>
            <operation>equals</operation>
            <valueField>Suburb__c.Organisation__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Suburb__c</referenceTo>
    <relationshipLabel>KiwiSport Data</relationshipLabel>
    <relationshipName>KiwiSport_Data</relationshipName>
    <type>Lookup</type>
</CustomField>