force-app/main/default/objects/KiwiSport_Data__c/fields/Total_Leverage__c.field-meta.xml
<CustomField>
    <fullName>Total_Leverage__c</fullName>
    <label>Total Leverage</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>