force-app/main/default/objects/KiwiSport_Data__c/fields/Total_number_of_All_Participants_across__c.field-meta.xml
<CustomField>
    <fullName>Total_number_of_All_Participants_across__c</fullName>
    <label>Total number of All Participants across</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>