force-app/main/default/objects/KiwiSport_Data__c/fields/Total_Participants_across_all_Sessions__c.field-meta.xml
<CustomField>
    <fullName>Total_Participants_across_all_Sessions__c</fullName>
    <label>Total Participants across all Sessions</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>