force-app/main/default/objects/KiwiSport_Data__c/fields/Trust_Contribution__c.field-meta.xml
<CustomField>
    <fullName>Trust_Contribution__c</fullName>
    <label>Trust Contribution</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>