force-app/main/default/objects/KiwiSport_Data__c/fields/Type_of_Activity__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Activity__c</fullName>
    <label>Type of Activity</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Skills Programme</fullName>
            </value>
            <value>
                <fullName>Assistance with Travel Costs</fullName>
            </value>
            <value>
                <fullName>Coaching Course</fullName>
            </value>
            <value>
                <fullName>Festival Event</fullName>
            </value>
            <value>
                <fullName>Multiple Sport Taster</fullName>
            </value>
            <value>
                <fullName>Purchase of Equipment</fullName>
            </value>
            <value>
                <fullName>Sport Opportunity or Competition</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>