force-app/main/default/objects/KiwiSport_Data__c/fields/Type_of_Project__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Project__c</fullName>
    <label>Type of Project</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contestable</fullName>
            </value>
            <value>
                <fullName>Non-Contestable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>