force-app/main/default/objects/KiwiSport_Data__c/validationRules/Partner_can_not_update_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Partner_can_not_update_Name</fullName>
    <active>true</active>
    <description>Partner Users can not update Kiwisport Project Name</description>
    <errorConditionFormula>AND(CONTAINS($User.Profile_Name__c,&apos;Partner&apos;), ISCHANGED(Name))</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Partner Users are not permitted to change Kiwisport Project Name</errorMessage>
</ValidationRule>