force-app/main/default/objects/KiwiSport_Data__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Financial_Year__c</columns>
    <columns>Organisation__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Provider_Name__c</columns>
    <columns>Project_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>